#6 Update World class and add JavaDoc